--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       }
       .header-image {
         width: 90%;
-        min-height: 250px; /* Altura mínima */
-        max-height: 400px; /* Evita que crezca demasiado en pantallas grandes */
+        min-height: 250px; 
+        max-height: 400px; 
         object-fit: cover;
         border-bottom: 5px solid #333;
         padding-top: 10px;
@@ -64,7 +64,7 @@
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         transition: transform 0.3s ease;
         width: 100%;
-        aspect-ratio: 1 / 0; /* Hace que el cuadro sea cuadrado */
+        aspect-ratio: 1 / 0; 
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -98,24 +98,24 @@
       }
 
       .hacer {
-      text-align: left; /* Mantiene el texto alineado a la izquierda */
-      padding: 1px; /* Espaciado interno */
+      text-align: left; 
+      padding: 1px; 
 
     }
 
     .hacer h3 {
-        margin-bottom: 5px; /* Espacio debajo del título */
+        margin-bottom: 5px; 
     }
 
     .hacer ul {
-        padding-left: 20px; /* Asegura la indentación de la lista */
-        list-style-type: disc; /* Usa puntos como viñetas */
+        padding-left: 20px; 
+        list-style-type: disc; 
         font-size: 20px;
     }
 
     .hacer ul li {
-    margin-bottom: 5px; /* Aumenta el espacio entre elementos de la lista */
-    line-height: 1.6; /* Mejora la legibilidad con más espacio entre líneas */
+    margin-bottom: 5px; 
+    line-height: 1.6; 
     }
     span{
       font-weight: bold;
@@ -140,13 +140,13 @@
     }
 
     .directores a:hover {
-        text-decoration: underline; /* Agrega subrayado al pasar el mouse */
+        text-decoration: underline; 
     }
 
     /* Contenedor para centrar y organizar la imagen con su descripción */
     .contenedor-imagen {
         display: flex;
-        flex-direction: column; /* Acomoda la imagen arriba y el texto debajo */
+        flex-direction: column; 
         align-items: center;
         justify-content: center;
         width: 100%;
@@ -170,8 +170,8 @@
 
     /* Efecto al pasar el mouse sobre la imagen */
     .imagen-app:hover {
-        transform: scale(1.05); /* Aumenta el tamaño un 5% */
-        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3); /* Acentúa la sombra */
+        transform: scale(1.05); 
+        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3); 
     }
 
     /* Ajusta la imagen dentro del contenedor */
@@ -206,7 +206,7 @@
   <body>
     <img src="assets/images/lag_villarrica_panoramica_2.jpg" alt="Imagen de encabezado" class="header-image" />
     <div class="container">
-      <div class="title">Proyecto FONDECYT 1221091</div>
+      <div class="title">FONDECYT-1221091 Project</div>
       <h2>“Seasonal and interannual variability of inherent and apparent optical properties in lakes and reservoirs in 
         south-central Chile: Implications for bio-optical modeling and water quality”</h1>
         <p class="directores"><span>Project Managers:</span></p>
