Update Project Team
Modificación detalle del equipo de trabajo: se agregó el desarrollador

--- a/index.html
+++ b/index.html
@@ -209,9 +209,10 @@
       <div class="title">FONDECYT-1221091 Project</div>
       <h2>“Seasonal and interannual variability of inherent and apparent optical properties in lakes and reservoirs in 
         south-central Chile: Implications for bio-optical modeling and water quality”</h1>
-        <p class="directores"><span>Project Managers:</span></p>
-        <p class="directores">Germán Velásquez - <a href="mailto:germanvelasquez@udec.cl">germanvelasquez@udec.cl</a></p>
-        <p class="directores">Santiago Yépez - <a href="mailto:santiago@example.com">syepez@udec.cl</a></p>
+        <p class="directores"><span>Project Team :</span></p>
+        <p class="directores">Project Manager: Santiago Yépez - <a href="mailto:santiago@example.com">syepez@udec.cl</a></p>
+        <p class="directores">Project Manager: Germán Velásquez - <a href="mailto:germanvelasquez@udec.cl">germanvelasquez@udec.cl</a></p>
+        <p class="directores">Developed by : Alejandro Aravena - <a href="mailto:a.aravenaibarra@gmail.com">a.aravenaibarra@gmail.com</a></p>      
 
         <div class="description">
         <p>Water quality monitoring in Chile has historically been a challenge due to the low density of measurement 
